# server/runtime_go_nakama.go
@@ -2787,7 +2787,7 @@ func (n *RuntimeGoNakamaModule) PurchaseValidateGoogle(ctx context.Context, user
 		return nil, errors.New("receipt cannot be empty string")
 	}
 
-	validation, err := ValidatePurchaseGoogle(ctx, n.logger, n.db, uid, &IAPGoogleConfig{clientEmail, privateKey}, receipt, persist)
+	validation, err := ValidatePurchaseGoogle(ctx, n.logger, n.db, uid, &IAPGoogleConfig{clientEmail, privateKey, ""}, receipt, persist)
 	if err != nil {
 		return nil, err
 	}
@@ -2867,6 +2867,133 @@ func (n *RuntimeGoNakamaModule) PurchaseGetByTransactionId(ctx context.Context, 
 	}
 
 	return GetPurchaseByTransactionID(ctx, n.logger, n.db, transactionID)
+}
+
+// @group subscriptions
+// @summary Validates and stores the subscription present in an Apple App Store Receipt.
+// @param ctx(type=context.Context) The context object represents information about the server and requester.
+// @param userId(type=string) The user ID of the owner of the receipt.
+// @param receipt(type=string) Base-64 encoded receipt data returned by the purchase operation itself.
+// @param persist(type=bool) Persist the subscription.
+// @param passwordOverride(type=string, optional=true) Override the iap.apple.shared_password provided in your configuration.
+// @return validation(*api.ValidateSubscriptionResponse) The resulting successfully validated subscription purchase.
+// @return error(error) An optional error value if an error occurred.
+func (n *RuntimeGoNakamaModule) SubscriptionValidateApple(ctx context.Context, userID, receipt string, persist bool, passwordOverride ...string) (*api.ValidateSubscriptionResponse, error) {
+	if n.config.GetIAP().Apple.SharedPassword == "" && len(passwordOverride) == 0 {
+		return nil, errors.New("apple IAP is not configured")
+	}
+	password := n.config.GetIAP().Apple.SharedPassword
+	if len(passwordOverride) > 1 {
+		return nil, errors.New("expects a single password override parameter")
+	} else if len(passwordOverride) == 1 {
+		password = passwordOverride[0]
+	}
+
+	uid, err := uuid.FromString(userID)
+	if err != nil {
+		return nil, errors.New("user ID must be a valid id string")
+	}
+
+	if len(receipt) < 1 {
+		return nil, errors.New("receipt cannot be empty string")
+	}
+
+	validation, err := ValidateSubscriptionApple(ctx, n.logger, n.db, uid, password, receipt, persist)
+	if err != nil {
+		return nil, err
+	}
+
+	return validation, nil
+}
+
+// @group subscriptions
+// @summary Validates and stores a subscription receipt from the Google Play Store.
+// @param ctx(type=context.Context) The context object represents information about the server and requester.
+// @param userId(type=string) The user ID of the owner of the receipt.
+// @param receipt(type=string) JSON encoded Google receipt.
+// @param persist(type=bool) Persist the subscription.
+// @param overrides(type=string, optional=true) Override the iap.google.client_email and iap.google.private_key provided in your configuration.
+// @return validation(*api.ValidatePurchaseResponse) The resulting successfully validated subscription.
+// @return error(error) An optional error value if an error occurred.
+func (n *RuntimeGoNakamaModule) SubscriptionValidateGoogle(ctx context.Context, userID, receipt string, persist bool, overrides ...struct {
+	ClientEmail string
+	PrivateKey  string
+}) (*api.ValidateSubscriptionResponse, error) {
+	clientEmail := n.config.GetIAP().Google.ClientEmail
+	privateKey := n.config.GetIAP().Google.PrivateKey
+
+	if len(overrides) > 1 {
+		return nil, errors.New("expects a single override parameter")
+	} else if len(overrides) == 1 {
+		if overrides[0].ClientEmail != "" {
+			clientEmail = overrides[0].ClientEmail
+		}
+		if overrides[0].PrivateKey != "" {
+			privateKey = overrides[0].PrivateKey
+		}
+	}
+
+	if clientEmail == "" || privateKey == "" {
+		return nil, errors.New("google IAP is not configured")
+	}
+
+	uid, err := uuid.FromString(userID)
+	if err != nil {
+		return nil, errors.New("user ID must be a valid id string")
+	}
+
+	if len(receipt) < 1 {
+		return nil, errors.New("receipt cannot be empty string")
+	}
+
+	validation, err := ValidateSubscriptionGoogle(ctx, n.logger, n.db, uid, &IAPGoogleConfig{clientEmail, privateKey, ""}, receipt, persist)
+	if err != nil {
+		return nil, err
+	}
+
+	return validation, nil
+}
+
+// @group subscriptions
+// @summary List stored validated subscriptions.
+// @param ctx(type=context.Context) The context object represents information about the server and requester.
+// @param userId(type=string) Filter by user ID. Can be an empty string to list purchases for all users.
+// @param limit(type=int) Limit number of records retrieved. Defaults to 100.
+// @param cursor(type=string) Pagination cursor from previous result. If none available set to nil or "" (empty string).
+// @return listSubscriptions(*api.SubscriptionList) A page of stored validated subscriptions.
+// @return error(error) An optional error value if an error occurred.
+func (n *RuntimeGoNakamaModule) SubscriptionsList(ctx context.Context, userID string, limit int, cursor string) (*api.SubscriptionList, error) {
+	if userID != "" {
+		if _, err := uuid.FromString(userID); err != nil {
+			return nil, errors.New("expects a valid user ID")
+		}
+	}
+
+	if limit <= 0 || limit > 100 {
+		return nil, errors.New("limit must be a positive value <= 100")
+	}
+
+	return ListSubscriptions(ctx, n.logger, n.db, userID, limit, cursor)
+}
+
+// @group subscriptions
+// @summary Look up a subscription receipt by productID.
+// @param ctx(type=context.Context) The context object represents information about the server and requester.
+// @param userId(type=string) User ID of the subscription owner.
+// @param productId(type=string) Product ID of the subscription to look up.
+// @return owner(string) The owner of the subscription.
+// @return subscription(*api.ValidatedSubscription) A validated subscription.
+// @return error(error) An optional error value if an error occurred.
+func (n *RuntimeGoNakamaModule) SubscriptionGetByProductId(ctx context.Context, userID, productID string) (string, *api.ValidatedSubscription, error) {
+	if _, err := uuid.FromString(userID); err != nil {
+		return "", nil, errors.New("expects a valid user ID")
+	}
+
+	if productID == "" {
+		return "", nil, errors.New("expects a product id string.")
+	}
+
+	return GetSubscriptionByProductId(ctx, n.logger, n.db, userID, productID)
 }
 
 // @group groups
